# extra-lints

./: Cargo.toml
.claude/: settings.local.json
agent_lint_utils/: Cargo.toml
agent_lint_utils/src/: lib.rs  workspace_lint.rs
derived_field_should_be_method/: Cargo.toml
derived_field_should_be_method/src/: lib.rs
derived_field_should_be_method/ui/: main.rs
item_complexity/: Cargo.toml
item_complexity/src/: lib.rs
item_complexity/ui/: main.rs
no_interior_mutable_statics/: Cargo.toml
no_interior_mutable_statics/src/: lib.rs
no_interior_mutable_statics/ui/: main.rs
no_pub_fields_on_pub_structs/: Cargo.toml
no_pub_fields_on_pub_structs/src/: lib.rs
no_stringly_typed/: Cargo.toml
no_stringly_typed/src/: lib.rs
no_stringly_typed/ui/: main.rs  main.stderr
no_underscore_prefix_without_drop/: Cargo.toml
no_underscore_prefix_without_drop/src/: lib.rs
no_underscore_prefix_without_drop/ui/: main.rs  main.stderr
option_single_variant/: Cargo.toml
option_single_variant/src/: lib.rs
overlapping_struct_fields/: Cargo.toml
overlapping_struct_fields/src/: lib.rs
src/: main.rs
tests/: option_single_variant.rs  overlapping_struct_fields.rs  trait_option_single_variant.rs  workspace_check.rs
trait_option_single_variant/: Cargo.toml
trait_option_single_variant/src/: lib.rs
trivial_forwarding/: Cargo.toml
trivial_forwarding/src/: lib.rs
trivial_forwarding/ui/: main.rs  main.stderr
unused_public_items_in_workspace/: Cargo.toml  README.md
unused_public_items_in_workspace/src/: lib.rs
