[package]
name = "pubprune"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.20"

[workspace]
exclude = [
    "no_interior_mutable_statics",
    "no_pub_fields_on_pub_structs",
    "no_underscore_prefix_without_drop",
    "trait_option_single_variant",
    "unused_public_items_in_workspace",
]

[workspace.metadata.dylint]
libraries = [
    { path = "no_interior_mutable_statics" },
    { path = "no_pub_fields_on_pub_structs" },
    { path = "no_underscore_prefix_without_drop" },
    { path = "trait_option_single_variant" },
    { path = "unused_public_items_in_workspace" },
]
